--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rncourse",
+  "name": "webcam",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "expo": "^47.0.0",
+    "expo-camera": "~13.1.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
